--- a/Web.Statu/App_Code/SearchResults.cshtml
+++ b/Web.Statu/App_Code/SearchResults.cshtml
@@ -1,4 +1,5 @@
-﻿@using System.Web.Mvc;
+﻿@using System.Linq;
+@using System.Web.Mvc;
 @using Devmasters.Core;
 @using HlidacStatu.Web.Models;
 
@@ -14,6 +15,32 @@
 	{
 		get { return ((WebViewPage)CurrentPage).Url; }
 	}
+}
+
+@helper InsolvenceTableResult(System.Security.Principal.IPrincipal user, HttpRequestBase req,
+			int maxItems, HlidacStatu.Lib.ES.InsolvenceSearchResult result)
+{
+<div class="table-new searching__watcher__table">
+	<table class="table table-hover">
+		<thead>
+			@SearchResults.InsolvenceHead()
+		</thead>
+		<tbody>
+			@foreach (var hit in result.Result.Hits.Take(maxItems))
+			{
+				@SearchResults.InsolvenceRow(user, req, hit.Source)
+			}
+		</tbody>
+	</table>
+
+	@if (result.Total > maxItems)
+	{
+		<div class="text-center">
+			<a class="btn btn-default btn-default-new" href="@Url.Action("Hledat", "Insolvence", result.ToRouteValues(1))">zobrazit všechny nalezené </a>
+		</div>
+	}
+
+</div>
 }
 
 @helper InsolvenceHead()
