--- a/Web.Statu/Views/Home/Reporty.cshtml
+++ b/Web.Statu/Views/Home/Reporty.cshtml
@@ -76,9 +76,9 @@
                 <p><a class="btn btn-default" href="/adresar" role="button">Podrobnosti »</a></p>
             </div>
             <div class="col-block-shadow">
-                <h3><a class="nostyle" href="/porovnani">Porovnání důležitých úřadů mezi sebou</a></h3>
+                <h3><a class="nostyle" href="/porovnat">Porovnání důležitých úřadů mezi sebou</a></h3>
                 <p>Publikují srovnatelné úřady do registru smluv dostatečně? Jsou transparetní? Liší se mezi sebou? Ukážeme vám to na vzájemném porovnání ministerstev, krajských úřadů, městský úřadů, vysokých škol a státních firem. Přehledně na jednom místě.</p>
-                <p><a class="btn btn-default" href="/porovnani" role="button">Podrobnosti »</a></p>
+                <p><a class="btn btn-default" href="/porovnat" role="button">Podrobnosti »</a></p>
             </div>
             <div class="col-block-shadow newbadge top-right">
                 <h3><a href="/Report/15">Úřady obchodující s firmami navázanými na politiky</a></h3>
