--- a/Web.Statu/Views/Insolvence/_StavRizeni.cshtml
+++ b/Web.Statu/Views/Insolvence/_StavRizeni.cshtml
@@ -8,7 +8,7 @@
 	case ISR.Nevyrizena:
 		<span title="Před rozhodnutím o úpadku">Nevyřízená</span>
 		break;
-	case ISR.Memoratorium:
+	case ISR.Moratorium:
 		<span title="Povoleno moratorium">Moratorium</span>
 		break;
 	case ISR.Upadek:
