--- a/Web.Statu/Views/Insolvence/_OddilDokumenty.cshtml
+++ b/Web.Statu/Views/Insolvence/_OddilDokumenty.cshtml
@@ -2,7 +2,9 @@
 @model HlidacStatu.Web.Models.DokumentListViewModel
 
 @{
-	var tableId = $"documents-{Model.Oddil}";
+    var tableId = $"documents-{Model.Oddil}";
+    Nest.HighlightFieldDictionary highlightingData = Model.HighlightingData;
+
 }
 
 
@@ -15,22 +17,32 @@
 			<th></th>
 		</tr>
 	</thead>
-	<tbody>
-		@foreach (var item in Model.Dokumenty.OrderByDescending(d => d.DatumVlozeni))
-		{
-			<tr>
-				<td>@item.Popis</td>
-				<td style="width:100px">@item.DatumVlozeni.ToShortDateString()</td>
-				<td style="width:80px"><a href="@item.Url">originál</a></td>
-				<td style="width:150px">
-					@if (item.Lenght > 0)
-					{
-						<a href="@Url.Action("TextDokumentu", "Insolvence", new { Id = item.Id })">zobrazit čistý text</a>
-					}
-				</td>
-			</tr>
-		}
-	</tbody>
+    <tbody>
+        @foreach (var item in Model.Dokumenty.OrderByDescending(d => d.DatumVlozeni))
+        {
+            string hlres = HlidacStatu.Web.Framework.Highlighter.HighlightContent(highlightingData, "dokumenty.plainText", item.PlainText);
+
+            <tr>
+                <td>@item.Popis</td>
+                <td style="width:100px">@item.DatumVlozeni.ToShortDateString()</td>
+                <td style="width:80px"><a href="@item.Url"><i class="far fa-lg fa-file-alt" alt="textová podoba dokumentu"></i></a></td>
+                <td style="width:80px">
+                    @if (item.Lenght > 0)
+                    {
+                        <a href="@Url.Action("TextDokumentu", "Insolvence", new { Id = item.Id })"><i class="far fa-lg fa-file-pdf" alt="Originál"></i></a>
+                    }
+                </td>
+            </tr>
+            if (hlres != null)
+            {
+                <tr>
+                    <td colspan="2" style="border-top:none">
+                        <div class="highlighting" style="padding-left:20px"><i class="far fa-search fa-lg fa-pull-left fa-border"></i>@Html.Raw(hlres)</div>
+                    </td>
+                </tr>
+            }
+        }
+    </tbody>
 </table>
 
 <script>
