link to insolvency in main menu

--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -215,6 +215,7 @@
                     <a href="/ucty">Financí</a>
                     <a href="/VerejneZakazky">Veřejných zakázek</a>
                     <a href="/StatniWeby">Webů</a>
+                    <a href="/Insolvence">Insolvencí</a>
                 </li>
 
                 <li class="hidden-sm hidden-xs">
