--- a/Web.Statu/Views/Home/Subjekt_Profile.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Profile.cshtml
@@ -564,13 +564,13 @@ else
         );
     }
     var queries = HlidacStatu.Lib.Data.External.DataSets.Search.GetSpecificQueriesForDatasets("ICO", Model.ICO);
-    var dsSearch = HlidacStatu.Lib.Data.Search.DatasetMultiQueryMultiResult.GeneralSearch(queries);
+    var dsSearch = HlidacStatu.Lib.Data.Search.DatasetMultiQueryMultiResult.GeneralSearch(queries,1,5);
     if (dsSearch.IsValid && dsSearch.Total > 0)
     {
         foreach (var dss in dsSearch.Results.Where(r => r.Total > 0))
         {
             tabs.Add($"{dss.DataSet.Registration().name} ({Util.PocetVysledku(dss.Total)})");
-            results.Add(dss.RenderResultsInHtml(dss.Q));
+            results.Add(dss.RenderResultsInHtml(dss.Q,5));
         }
     }
 
