Co je statni firma - fix
doplneni OVM

--- a/Web.Statu/Views/Home/OsobaProfil.cshtml
+++ b/Web.Statu/Views/Home/OsobaProfil.cshtml
@@ -121,25 +121,29 @@
     List<string> tabs = new List<string>();
     List<string> results = new List<string>();
 
-    tabs.Add("Zkratka osoby pro hledání");
-    results.Add($"Pokud napíšete do hledání text <code>osobaId:{Model.NameId}</code>, zobrazí se smlouvy s vazbou na {Model.FullName()}");
+    tabs.Add("Základní info");
+    string zaklInfo =$"<h4>Hledání informací s vazbou na {Model.FullName()}</h4>"
+        + "<p>"
+        + $"Pokud napíšete do hledání text <code>osobaId:{Model.NameId}</code>, zobrazí se smlouvy, veřejné zakázky, dary a další informace, které mají vazbu na " +
+        $" s vazbou na {Model.FullName()} nebo firmy touto osobou přímo či nepřímo vlastněnou či řízenou."
+        + "</p>"
 
-    tabs.Add("Hlídat tuto osobu");
-    results.Add(""
-            + Util.AddWatchDog(this.User, "OsobaId:" + Model.NameId, typeof(HlidacStatu.Lib.Data.Smlouva), "Hlídat nové smlouvy v registru smluv spojené s " + Model.FullName() + " a navázanými firmami", "", "", btnCss: "btn btn-warning btn-sm", prefillWDname: "Nové smluvy pro " + Model.FullName()).ToHtmlString()
+        + "<h4>Hlídání emailem</h4>"
+        + "<p>"
+        + Util.AddWatchDog(this.User, "OsobaId:" + Model.NameId, typeof(HlidacStatu.Lib.Data.Smlouva), "Hlídat nové smlouvy v registru smluv spojené s " + Model.FullName() + " a navázanými firmami", "", "", btnCss: "btn btn-warning btn-sm", prefillWDname: "Nové smluvy pro " + Model.FullName()).ToHtmlString()
         + "<br />"
         + Util.AddWatchDog(this.User, "OsobaId:" + Model.NameId, typeof(HlidacStatu.Lib.Data.VZ.VerejnaZakazka), "Hlídat nové veřejné zakázky spojené s " + Model.FullName() + " a navázanými firmami", "", "", btnCss: "btn btn-warning btn-sm", prefillWDname: "Nové veřejné zakázky pro " + Model.FullName()).ToHtmlString()
         + "<br />"
         + Util.AddWatchDog(this.User, "OsobaId:" + Model.NameId, null, $"Hlídat všechny novinky o {Model.FullName()} a navázaných firmách ve všech databázích", "", "", btnCss: "btn btn-warning btn-sm", prefillWDname: "Novinky pro " + Model.FullName()).ToHtmlString()
-        + ""
-        );
-
-    tabs.Add("Sdílení");
-    results.Add(
-        Util.ShareFacebook(Model.GetUrl(false)).ToHtmlString()
+        + "</p>"
+        + "<h4>Sdílení</h4>"
+        + "<p>"
+        + Util.ShareFacebook(Model.GetUrl(false)).ToHtmlString()
         + Util.ShareTwitter(Model.GetUrl(false), $"{Model.Jmeno} na @HlidacStatu - {Model.InfoFacts().First().Render(false)}").ToHtmlString()
         + Util.ShareWidget(Model.GetUrl(false))
-    );
+        + "</p>";
+
+    results.Add(zaklInfo);
 
 
     var dsQuery = $"( OsobaId:{Model.NameId} ) OR (\"{Model.FullName()}\")";
