--- a/Web.Statu/Views/Home/Subjekt.cshtml
+++ b/Web.Statu/Views/Home/Subjekt.cshtml
@@ -65,7 +65,7 @@
 
     <div style="height:34px"></div>
 
-    @if (Model.firma.JsemStatniFirma())
+    @if (Model.firma.PatrimStatu())
     {
         @*@Html.Partial("Subjekt_Vztahy", Model.firma)*@
 
