--- a/Web.Statu/Views/Home/Subjekt_Profile2.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Profile2.cshtml
@@ -58,7 +58,7 @@
     @Util.AddBookmark(this.User, Model)
     @Model.Jmeno
 </h2>
-@if (Model.JsemStatniFirma())
+@if (Model.PatrimStatu())
 {
     <h4>(spolu)vlastněná státem či samosprávou</h4>
 }
